--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="main">
     <h1>Blackjack</h1>
-    <p id="diler-el">Protivnik:</p>
+    <span id="diler-el">Diler:</span>
     <p id="poruka-el">Igramo ponovo?</p>
-    <p id="karte-el">Karte:</p>
+    <span id="karte-el">Karte:</span>
     <p id="sum-el">Ukupno:</p>
-    <div1 id="kreni">
+    <div id="kreni">
         <button id = "start-Btn">POCETAK IGRE</button>
-    </div1>
-    <div2 id = "igra">
+    </div>
+    <div id = "igra">
         <button id = "nova-Btn">NOVA KARTA</button>
         <button id = "provera-Btn">DOSTA</button>
-    </div2>
     </div>
     <p id = "player-el">Igrac: </p>
+</div>
+</div>
 </body>
 <script src="index.js"></script>
 </html>
